--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>microservicio-docente</name>
 	<description>Demo project for Spring Boot</description>
+	<packaging>war</packaging>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+		<modelmapper.version>2.4.4</modelmapper.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -45,6 +49,10 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
 		</dependency>
 	</dependencies>
 
