--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=microservicio-docente
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_instituto
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/db_instituto
+spring.datasource.url=jdbc:postgresql://192.168.1.46:5432/db_instituto
+spring.datasource.username=sa
+spring.datasource.password=123456
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-stacktrace=never
-server.port=8082
+#server.port=8082
